[project]
requires-python = ">=3.10"

[tool.poetry]
name = "contextcache"
version = "0.3.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.group.dev.dependencies]
black = "^23.10.0"
mypy = "^1.6.0"
pytest = "^7.4.2"
pytest-asyncio = "^0.21.1"
shrtcodes = "^1.2.0"
ruff = "^0.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
select = ["E", "F", "I", "UP"]